kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: balloon-namespace
  labels:
    name: balloon-namespace
