kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balloon-deployment
  namespace: balloon-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-project
  minReadySeconds: 25
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: devops-project
    spec:
      containers:
        - name: devops-project
          image: nadicadimitrovska/devops-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
