kubernetes/configmap.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: balloon-statefulset
  namespace: balloon-namespace
spec:
  serviceName: devops-project-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: balloon-namespace
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          volumeMounts:
            - name: devops-project-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: devops-project-postgres-data
          persistentVolumeClaim:
            claimName: app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: balloon-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
  type: LoadBalancer
